<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeesStructurepageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#CFEBED"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/feebackbtn"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/feebackbtn"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="19dp"
                android:layout_weight="1"
                android:text="@string/fee_structure"
                android:textColor="#232222"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#FBEEEE"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:text="@string/textsemester"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:hint="@string/_7"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:background="#FBEEEE"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="Total Fees"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/_0_00"
                android:textColor="#E65100"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Paid_Fees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="Paid Fees"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/_0_00"
                android:textColor="#E65100"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Unpaid_fees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="Unpaid Fees"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/_0_00"
                android:textColor="#E65100"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="120dp"
                android:layout_marginTop="190dp"
                android:layout_marginEnd="120dp"
                android:background="@color/app_theme"
                android:text="@string/deposit_fee"
                android:textColor="#FBFCFD"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>